# seafowl-udf-rust

./: Cargo.toml  README.md  create_udf.sh  make_create_function_sql.js  query_udf.sh
src/: lib.rs  mod.rs  udf.rs
